--- a/packages/database/.env.example
+++ b/packages/database/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL="mysql://forlinauser:{{ PASSWORD HERE }}@localhost:3306/forlinadb"
-MYSQL_DATABASE="forlinadb"
-MYSQL_USER="forlinauser"
+DATABASE_URL="mysql://r2tk:{{ PASSWORD HERE }}@localhost:3306/remnant2toolkit"
+MYSQL_DATABASE="remnant2toolkit"
+MYSQL_USER="r2tk"
 MYSQL_PASSWORD="{{ PASSWORD HERE }}"
 MYSQL_ROOT_PASSWORD="{{ DIFFERENT PASSWORD HERE }}"
